# music-central

./: Combinations.py  Dockerfile  LICENSE  MidiHolder.py  MidiLive.py  Nicknames.py  ParseMaml.py  ParseMamlRequestResponse.py  Printer.py  PrinterRequestResponse.py  README.md  Server.py  database-sharding.drawio  index.py  poc.mid  poc2.mid  pyproject.toml  require.txt  requirements.txt  todo.txt
config/: config.win.yaml  config.yaml
generators/: loopStructure.py  song_alpha.py
public/: index - Copy.html  index.html
tests/: hi.txt  maml.properties  requirements.linux.txt  test_midi_holder.py  test_nicknames.py  test_perform_techno.py  test_persistence.py  test_printer.py  test_roman_numerals.py  test_single.py  test_stage_fright.py
tests/config/: config.win.yaml  config.yaml
tests/data/: TryToCatchTheDream.yaml  example_1.yaml  gifts_data_out.json  maml_out.yaml  mary_test.yaml  melody_persistence.yaml  note_beat_melissa.yaml  offset_note_examples.yaml  old_smokey-offset_note.yaml  perform_techno.yaml  practice_SAH.yaml  roman_numerals.yaml  song.fornof.midi.yml  song.mid  stage_fright.yaml  test_combinations.yaml  test_combinations1.yaml  test_combinations2-multi.yaml  test_converter_note_beat.yaml  test_converter_offset.yaml  test_mid_type.yaml  test_nbef_flatfile.yaml  test_nicknames_1.yaml  test_output_live_phrases copy.yaml  test_output_live_phrases.yaml  test_parseMaml.yaml
